<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/action_sel_start"
		android:showAsAction="ifRoom"
		android:title="@string/action_sel_start"/>
	<item
		android:id="@+id/action_sel_stop"
		android:showAsAction="ifRoom"
		android:title="@string/action_sel_stop"/>
	<item
		android:id="@+id/action_sel_remove"
		android:showAsAction="ifRoom"
		android:title="@string/action_sel_remove"/>
	<item
		android:id="@+id/action_sel_move"
		android:showAsAction="ifRoom"
		android:title="@string/action_sel_move">
		<menu>
			<item
				android:id="@+id/action_sel_move_top"
				android:showAsAction="never"
				android:title="@string/action_sel_move_top"/>
			<item
				android:id="@+id/action_sel_move_up"
				android:showAsAction="never"
				android:title="@string/action_sel_move_up"/>
			<item
				android:id="@+id/action_sel_move_down"
				android:showAsAction="never"
				android:title="@string/action_sel_move_down"/>
			<item
				android:id="@+id/action_sel_move_bottom"
				android:showAsAction="never"
				android:title="@string/action_sel_move_bottom"/>
			<item
				android:id="@+id/action_sel_move_position"
				android:showAsAction="never"
				android:visible="false"
				android:title="@string/action_sel_move_position"/>
		</menu>
	</item>
	<item
		android:id="@+id/action_sel_forcestart"
		android:showAsAction="ifRoom"
		android:title="@string/action_sel_forcestart"/>
	<item
		android:id="@+id/action_sel_relocate"
		android:showAsAction="never"
		android:title="@string/action_sel_relocate"/>

</menu>