<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res/com.vuze.android.remote"
	android:id="@+id/openoptions_scrollview"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	tools:context=".fragment.OpenOptionsGeneralFragment" >

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingLeft="10dp"
		android:paddingRight="10dp" >

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >

			<TextView
				android:id="@+id/openoptions_lbl_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_alignParentRight="true"
				android:text="@string/openoptions_lbl_name"
				android:textColor="?android:attr/textColorHint"
				android:textSize="12sp" />

			<TextView
				android:id="@+id/openoptions_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_below="@+id/openoptions_lbl_name"
				android:layout_toLeftOf="@+id/openoptions_btn_editname"
				android:textAppearance="?android:attr/textAppearanceMedium" />

			<ImageButton
				android:id="@+id/openoptions_btn_editname"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignBottom="@+id/openoptions_name"
				android:layout_alignParentRight="true"
				android:background="@null"
				android:contentDescription="@string/openoptions_btn_editname"
				android:padding="0dp"
				android:src="@drawable/ic_action_overflow" />
		</RelativeLayout>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="10dp" >

			<TextView
				android:id="@+id/openoptions_lbl_saveloc"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:text="@string/open_options_lbl_saveloc"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="?android:attr/textColorHint"
				android:textSize="12sp" />

			<TextView
				android:id="@+id/openoptions_saveloc"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_alignRight="@+id/openoptions_freespace"
				android:layout_below="@+id/openoptions_lbl_saveloc"
				android:textAppearance="?android:attr/textAppearanceMedium" />

			<ImageButton
				android:id="@+id/openoptions_btn_editdir"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_marginLeft="10dp"
				android:background="@android:drawable/btn_default_small"
				android:contentDescription="@string/openoptions_btn_editdir"
				android:src="@drawable/ic_action_collection" />

			<TextView
				android:id="@+id/openoptions_freespace"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignBaseline="@+id/openoptions_lbl_saveloc"
				android:layout_alignBottom="@+id/openoptions_lbl_saveloc"
				android:layout_toLeftOf="@+id/openoptions_btn_editdir"
				android:layout_toRightOf="@+id/openoptions_lbl_saveloc"
				android:alpha="0.8"
				android:gravity="right"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textSize="12sp" />
		</RelativeLayout>

		<TextView
			android:id="@+id/openoptions_lbl_position"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="fill"
			android:paddingTop="5dp"
			android:text="@string/openoptions_sw_state"
			android:textAppearance="?android:attr/textAppearance"
			android:textColor="?android:attr/textColorHint"
			android:textSize="12sp" />

		<org.jraf.android.backport.switchwidget.Switch
			android:id="@+id/openoptions_sw_position"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:asb_textOff="@string/openoptions_position_first"
			app:asb_textOn="@string/openoptions_position_last"
			tools:ignore="MissingRegistered" />

		<TextView
			android:id="@+id/openoptions_lbl_sw_state"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="fill_vertical"
			android:paddingTop="5dp"
			android:text="@string/openoptions_sw_position"
			android:textAppearance="?android:attr/textAppearance"
			android:textColor="?android:attr/textColorHint"
			android:textSize="12sp" />

		<org.jraf.android.backport.switchwidget.Switch
			android:id="@+id/openoptions_sw_state"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="true"
			android:minHeight="32dp"
			app:asb_textOff="@string/openoptions_state_stopped"
			app:asb_textOn="@string/openoptions_state_queued"
			tools:ignore="MissingRegistered" />

	</LinearLayout>

</ScrollView>