<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin" >

		<TextView
			android:id="@+id/about_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/app_name"
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<TextView
			android:id="@+id/about_copyright"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/about_copyright"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView
			android:id="@+id/about_license"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/about_license"
			android:textAppearance="?android:attr/textAppearanceSmall" />

		<TextView
			android:id="@+id/about_ideas"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:linksClickable="true"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView
			android:id="@+id/about_thanksto_header"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:text="@string/about_thanks_header"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView
			android:id="@+id/about_thanksto"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:linksClickable="true"
			android:textAppearance="?android:attr/textAppearanceSmall" />

	</LinearLayout>

</ScrollView>