<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

	<RelativeLayout
		android:id="@+id/RelativeLayout1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/activity_vertical_margin" >

		<CheckBox
			android:id="@+id/rp_chkDL"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentTop="true"
			android:gravity="center_vertical"
			android:text="@string/rp_download_speed" />

		<LinearLayout
			android:id="@+id/rp_DLArea"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/rp_chkDL"
			android:layout_marginLeft="20dp" >

			<EditText
				android:id="@+id/rp_tvDL"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:ems="5"
				android:inputType="number" >
			</EditText>

			<TextView
				android:id="@+id/rp_tvDL_info"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginLeft="5dp"
				android:gravity="center_vertical"
				android:text="@string/kbps" />
		</LinearLayout>

		<CheckBox
			android:id="@+id/rp_chkUL"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/rp_DLArea"
			android:gravity="center_vertical"
			android:text="@string/rp_upload_speed" />

		<LinearLayout
			android:id="@+id/rp_ULArea"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/rp_chkUL"
			android:layout_marginLeft="20dp" >

			<EditText
				android:id="@+id/rp_tvUL"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:ems="5"
				android:inputType="number" />

			<TextView
				android:id="@+id/rptvUL_info"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginLeft="5dp"
				android:gravity="center_vertical"
				android:text="@string/kbps" />
		</LinearLayout>

		<CheckBox
			android:id="@+id/rp_chkRefresh"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/rp_ULArea"
			android:gravity="center_vertical"
			android:text="@string/rp_update_interval" />

		<LinearLayout
			android:id="@+id/rp_UpdateIntervalArea"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/rp_chkRefresh"
			android:layout_marginLeft="20dp" >

			<EditText
				android:id="@+id/rpUpdateInterval"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:ems="5"
				android:inputType="number" />

			<TextView
				android:id="@+id/rpUpdateInterval_info"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginLeft="5dp"
				android:gravity="center_vertical"
				android:text="@string/seconds" />
		</LinearLayout>
	</RelativeLayout>

</ScrollView>